# github-manage-stars-unofficial

./: .gitignore  CHANGELOG.md  LICENSE  PROPOSAL.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: ai-prompt-template.md  custom-categories.json  stars.example.jsonl  state.example.json
src/ghstars/: __init__.py  __main__.py  api.py  categorize.py  cli.py  config.py  console.py  credentials.py  fetch.py  orchestrator.py  parser.py  presets.py  state.py  validators.py
tests/: test_categorize.py  test_credentials.py  test_parser.py  test_state_and_config.py  test_validators.py
