[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-manage-stars-unofficial"
version = "0.1.1"
description = "Interactive CLI for organising your GitHub starred repositories into lists via GitHub's unofficial UI endpoints."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "github-manage-stars-unofficial contributors" }]
keywords = ["github", "stars", "cli", "lists", "organize"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "fake-useragent>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/snowfluke/github-manage-stars-unofficial"
Issues = "https://github.com/snowfluke/github-manage-stars-unofficial/issues"
Proposal = "https://github.com/snowfluke/github-manage-stars-unofficial/blob/main/PROPOSAL.md"

[project.scripts]
ghstars = "ghstars.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ghstars"]

[tool.ruff]
line-length = 100
target-version = "py310"
